--- a/module.ini
+++ b/module.ini
@@ -3,5 +3,5 @@ type = custom/script
 exec = ~/.config/polybar/scripts/info-trash.sh
 click-left = /bin/sh -c "nautilus ~/.local/share/Trash/files" &
 tail = true
+format-padding = 2
 interval = 5
-format = <label>
